--- a/posts/2015-05-04.md
+++ b/posts/2015-05-04.md
@@ -1,4 +1,4 @@
-**Note**: [the abomonation library](https://github.com/frankmcsherry/abomonation) has updated and improved in the meantime. I've left the text unadjusted, but several things are now out of date.
+**Note**: [the abomonation library](https://github.com/frankmcsherry/abomonation) has updated and improved in the time since this post. I've left the text unadjusted, but several things are now out of date.
 
 ---
 
@@ -12,19 +12,19 @@ I should say that many of the things going on in here look a lot like what goes 
 
 Our goal is to write a pair of methods with the following signatures:
 
-{% highlight rust %}
+```rust
 fn encode<T>(typed: &[T], bytes: &mut Vec<u8>);
 fn decode<T>(bytes: &[u8]) -> &[T];
-{% endhighlight %}
+```
 
 That is, if you present a slice of data `&[T]` we can populate a `Vec<u8>` with appropriate binary data. Similarly, if you provide us some binary data `&[u8]`, we can interpret it as typed data `&[T]` for you.
 
 We aren't going to do this by the end of the post, but we'll have something pretty similar. These are the actual signatures at the moment (the implementations are at the end of the post; don't read them yet!):
 
-{% highlight rust %}
+```rust
 fn encode<T: Abomonation>(typed: &Vec<T>, bytes: &mut Vec<u8>);
 fn decode<T: Abomonation>(bytes: &mut [u8]) -> &Vec<T>;
-{% endhighlight %}
+```
 
 There are important distinctions here, so let's briefly think about what's being said by the interfaces.
 
@@ -42,35 +42,35 @@ Let's start with some easy examples, ones that use the `unsafe` keyword but whic
 
 The following function takes a slice of typed data and presents it back as a slice of binary data.
 
-{% highlight rust %}
+```rust
 unsafe fn typed_to_bytes<T>(slice: &[T]) -> &[u8] {
     std::slice::from_raw_parts(slice.as_ptr() as *const u8,
                                slice.len() * mem::size_of::<T>())
 }
-{% endhighlight %}
+```
 
 Notice the `unsafe` label on the function. This is because it uses the `from_raw_parts` method, which is itself unsafe (it doesn't check to make sure that the underlying data look correct). In this case it is safe, because we only want to look at the binary data (not mutate it) and every byte is a valid `u8`.
 
 I could choose to remove the `unsafe` label and put unsafe interally like so, declaring the method safe:
 
-{% highlight rust %}
+```rust
 fn typed_to_bytes<T>(slice: &[T]) -> &[u8] {
     unsafe {
         std::slice::from_raw_parts(slice.as_ptr() as *const u8,
                                    slice.len() * mem::size_of::<T>())
     }
 }
-{% endhighlight %}
+```
 
 I have been warned this is bad, though, because reading a struct-padding byte is undefined behavior. This will not be the most irresponsible thing that happens in this post.
 
 On the other end of the safety spectrum, I present:
-{% highlight rust %}
+```rust
 unsafe fn bytes_to_typed<T>(slice: &mut [u8]) -> &mut [T] {
     std::slice::from_raw_parts_mut(slice.as_mut_ptr() as *mut T,
                                    slice.len() / mem::size_of::<T>())
 }
-{% endhighlight %}
+```
 
 This not only exposes mutable slices, but permits any type at all. Imagine what would happen if `T` was `String`, for example: `String` owns its `[u8]` buffer and cointains a pointer to it. You would be able to dereference arbitrary places in memory! Danger!! Danger!! The `unsafe` label stays on for this one.
 
@@ -82,13 +82,13 @@ These two methods work great if all you want to serialize are slices of primitiv
 
 We are going to use the above two functions in our implementation of `encode` and `decode`, so let's be brave and add the following sorts of implementations:
 
-{% highlight rust %}
+```rust
 impl Abomonation for u8 { }
 impl Abomonation for u16 { }
 impl Abomonation for u32 { }
 impl Abomonation for u64 { }
 // lots of others ...
-{% endhighlight %}
+```
 
 Notice that these implementations don't *do* anything, they just indicate that it is safe for `encode` and `decode` to transmute them around. In fact, `Abomonation` will have a few methods, but these types can just use the default implementations.
 
@@ -100,12 +100,12 @@ Primitive types are neat and all, but we are serious people! What about things l
 
 Ok, let's just write down this trait.
 
-{% highlight rust %}
+```rust
 trait Abomonation {
     unsafe fn entomb(&self, _writer: &mut Vec<u8>) { }
     unsafe fn exhume(&mut self, _bytes: &mut &[u8]) { }
 }
-{% endhighlight %}
+```
 
 Wow, grim. In case `unsafe` wasn't enough, I chose creepy method names. Creepy, but appropriate!
 
@@ -126,7 +126,7 @@ All those happy townsfolk, oblivious to what awaits...
 
 We got this far because we needed to talk about tuples. Let's see how we might implement the weirdly capable `Abomonation` for a pair of abomonable types.
 
-{% highlight rust %}
+```rust
 impl<T1: Abomonation, T2: Abomonation> Abomonation for (T1, T2) {
     unsafe fn entomb(&self, writer: &mut Vec<u8>) {
         self.0.entomb(writer); self.1.entomb(writer);
@@ -135,7 +135,7 @@ impl<T1: Abomonation, T2: Abomonation> Abomonation for (T1, T2) {
         self.0.exhume(bytes); self.1.exhume(bytes)
     }
 }
-{% endhighlight %}
+```
 
 Really, the whole interface is probably just messsing with forces we don't understand.
 
@@ -149,7 +149,7 @@ Some drinks in, an ambitious scientist finds she needs to serialize a `&[Vec<Vec
 
 Well, you can certainly type it.
 
-{% highlight rust %}
+```rust
 impl<T> Abomonation for Vec<T> where T: Abomonation {
     unsafe fn entomb(&self, writer: &mut Vec<u8>) {
         // write out the contents of self
@@ -158,7 +158,7 @@ impl<T> Abomonation for Vec<T> where T: Abomonation {
         // read back the contents into &mut self
     }
 }
-{% endhighlight %}
+```
 
 You know, this might just work. A `Vec` is a pointer, a length, and a capacity. Three `usize` values. Serializing this triple doesn't serialize the `Vec`'s *contents*, but we can just do that in `Vec`'s `entomb`. Similarly, when we pick up the serialized form of the `Vec`, a triple, it doesn't point at anything valid (to our great shame, it points at some location in memory wherever we serialized this), but  `exhume` gives us a chance to read valid data back and make things right.
 
@@ -172,7 +172,7 @@ Rust provides unsafe functions capable of assembling a `Vec` out of "raw parts":
 
 Now, our scientist may be power-mad, but she is still a scientist so she's going to do this properly.
 
-{% highlight rust %}
+```rust
 unsafe fn exhume(&mut self, bytes: &mut &[u8]) {
 
     // 1. extract the memory from bytes to back our vector
@@ -192,7 +192,7 @@ unsafe fn exhume(&mut self, bytes: &mut &[u8]) {
     // 5. pretend everything is normal; call exhume on each element
     for element in self.iter_mut() { element.exhume(bytes); }
 }
-{% endhighlight %}
+```
 
 Pretty much all of these lines (everything except step `1.`) are unsafe. Because the method has the `unsafe` tag, we don't need to flag individual regions as unsafe. They are all *quite* unsafe.
 
@@ -232,7 +232,7 @@ While we have been fretting about what might have gone wrong, she is experiencin
 
 Here is a helpful routine to spin Rust's `Bencher` struct on any type implementing `Abomonation`.
 
-{% highlight rust %}
+```rust
 fn _bench_enc<T: Abomonation>(bencher: &mut Bencher, vector: &Vec<T>) {
 
     let mut bytes = Vec::new();
@@ -243,7 +243,7 @@ fn _bench_enc<T: Abomonation>(bencher: &mut Bencher, vector: &Vec<T>) {
         encode(vector, &mut bytes);
     });
 }
-{% endhighlight %}
+```
 
 We try it out with types `Vec<u64>`, `Vec<String>`, and `Vec<Vec<(u64, String)>>` and see:
 
@@ -261,7 +261,7 @@ What about deserialization? That is where all the mess is, right? Well, it is a 
 
 I did put some testing code in place to make sure that we were getting the right results back:
 
-{% highlight rust %}
+```rust
 fn _bench_dec<T: Abomonation+Eq>(bencher: &mut Bencher, vector: &Vec<T>) {
 
     let mut bytes = Vec::new();
@@ -275,7 +275,7 @@ fn _bench_dec<T: Abomonation+Eq>(bencher: &mut Bencher, vector: &Vec<T>) {
         }
     });
 }
-{% endhighlight %}
+```
 
 These give pretty comparable results. Apparently pushing a bunch of bytes works at about the same rate as checking that those bytes are what you expected. Again, not goodput numbers; *caveat emptor*.
 
@@ -295,22 +295,22 @@ Hey look, 4TB/s deserialization. Maybe it is time to head back to Silicon Valley
 
 I wanted to put the implementations up here, but they aren't very pretty. In particular, I suspect they could be greatly improved (possibly by deletion).
 
-{% highlight rust %}
+```rust
 pub fn encode<T: Abomonation>(typed: &Vec<T>, bytes: &mut Vec<u8>) {
     let slice = unsafe { std::slice::from_raw_parts(mem::transmute(typed), size_of::<Vec<T>>()) };
     bytes.write_all(slice).unwrap();
     unsafe { typed.entomb(bytes); }
 }
-{% endhighlight %}
+```
 
-{% highlight rust %}
+```rust
 pub fn decode<T: Abomonation>(bytes: &mut [u8]) -> &Vec<T> {
     let (split1, split2) = bytes.split_at_mut(mem::size_of::<Vec<T>>());
     let result: &mut Vec<T> = unsafe { mem::transmute(split1.get_unchecked_mut(0)) };
     unsafe { result.exhume(&mut &*split2); }
     result
 }
-{% endhighlight %}
+```
 
 The whole pile of stuff will be up on [github](https://github.com/frankmcsherry) and [crates.io](https://crates.io) eventually, but I wanted to take at least a bit of time with other eyeballs on this to see if a) it is all horribly wrong, and b) whether the risk is ever worth it.
 
