--- a/posts/2015-05-04.md
+++ b/posts/2015-05-04.md
@@ -1,4 +1,4 @@
-**Note**: [the abomonation library](https://github.com/frankmcsherry/abomonation) has updated and improved in the time since this post. I've left the text unadjusted, but several things are now out of date.
+**Note**: [the abomonation library](https://github.com/frankmcsherry/abomonation) has improved in the time since this post. I've left the text unadjusted, but several things are now out of date.
 
 ---
 
