--- a/posts/2015-07-31.md
+++ b/posts/2015-07-31.md
@@ -133,11 +133,11 @@ However, a much larger fraction of time (72.54%) is spent in various Scala colle
 
 Additionally, one of our readers [suggested](https://news.ycombinator.com/item?id=9854895) taking average cycle-per-instruction (CPI) measurements for GraphX and timely dataflow in order to see which system spends more time waiting on memory. We thought that was a rather nice idea, so we went and did it using the `perf` profiling tool for Linux.
 
-| Metric                         | GraphX | Timely dataflow |
-|--------------------------------|--------|-----------------|
-| Cycles per instruction (CPI)   |   1.95 |            1.09 |
-| Stalled cycles per instruction |   1.54 |            0.74 |
-| Instructions per LLC miss      |    252 |             522 |
+| Metric                         | GraphX 10g| Timely dataflow 10g |
+|--------------------------------|----------:|--------------------:|
+| Cycles per instruction (CPI)   |      1.95 |                1.09 |
+| Stalled cycles per instruction |      1.54 |                0.74 |
+| Instructions per LLC miss      |       252 |                 522 |
 
 The table shows what we already suspected: GraphX's CPI is almost 2x higher than timely dataflow's, meaning that the processor spends more time waiting on other parts of the system than actually doing work. Likewise, GraphX has a higher average number of stalled cycles per instruction, and misses in the LLC more often (about every 252 instructions _vs._ every 522 instructions in timely dataflow).
 
