--- a/posts/2015-07-31.md
+++ b/posts/2015-07-31.md
@@ -133,11 +133,11 @@ However, a much larger fraction of time (72.54%) is spent in various Scala colle
 
 Additionally, one of our readers [suggested](https://news.ycombinator.com/item?id=9854895) taking average cycle-per-instruction (CPI) measurements for GraphX and timely dataflow in order to see which system spends more time waiting on memory. We thought that was a rather nice idea, so we went and did it using the `perf` profiling tool for Linux.
 
-| Metric                         | GraphX 10g| Timely dataflow 10g |
-|--------------------------------|----------:|--------------------:|
-| Cycles per instruction (CPI)   |      1.95 |                1.09 |
-| Stalled cycles per instruction |      1.54 |                0.74 |
-| Instructions per LLC miss      |       252 |                 522 |
+| Metric                         | GraphX 10G | Timely dataflow 10G |
+|--------------------------------|-----------:|--------------------:|
+| Cycles per instruction (CPI)   |       1.95 |                1.09 |
+| Stalled cycles per instruction |       1.54 |                0.74 |
+| Instructions per LLC miss      |        252 |                 522 |
 
 The table shows what we already suspected: GraphX's CPI is almost 2x higher than timely dataflow's, meaning that the processor spends more time waiting on other parts of the system than actually doing work. Likewise, GraphX has a higher average number of stalled cycles per instruction, and misses in the LLC more often (about every 252 instructions _vs._ every 522 instructions in timely dataflow).
 
@@ -190,81 +190,23 @@ Each process must transmit _at least_ this smaller number of updates. The time i
 
 Let's look at the minimum number of updates that one specific process<sup><a name="fn8l" href="#fn8">8</a></sup> must transmit when using process-level aggregation. Each update is at least 8 bytes (a `u32` and a `f32`); divided by 1 Gb/s, we get a *lower bound* on how quickly this approach can iterate on a 1G network (assuming infinitely fast aggregation). Depending on the number of machines, this time is between 1 and 5 seconds (third column). This best-case bound is still often slower than our *measured*, real-world 10G times. If we compare the two, we get a lower bound on the speed-up from using our 10G implementation as compared to the most efficient 1G implementation possible (fourth column).<a name="fn9l" href="#fn9"><sup>9</sup></a>
 
-<center>
-<table border="1" style="width:75%">
-<tr><th>cores</th>
-<!-- <th>worker-level</th>  -->
-<th>updates</th>
-<th>1G lower bound</th>
-<th>1G bound / 10G measured</th>
-</tr>
-<tr><td align="right">2x8</td>
-<!-- <td align="right">126,689,200</td> -->
-<td align="right">31,215,505</td>
-<td align="right">2.00s</td>
-<td align="right">0.85x</td>
-</tr>
-<tr><td align="right">4x8</td>
-<!-- <td align="right">83,591,288</td> -->
-<td align="right">26,835,975</td>
-<td align="right">1.72s</td>
-<td align="right">1.15x</td>
-</tr>
-<tr><td align="right">8x8</td>
-<!-- <td align="right">52,899,088</td> -->
-<td align="right">22,809,014</td>
-<td align="right">1.46s</td>
-<td align="right">1.39x</td>
-</tr>
-<tr><td align="right">16x8</td>
-<!-- <td align="right">38,026,392</td> -->
-<td align="right">15,836,150</td>
-<td align="right">1.01s</td>
-<td align="right">1.35x</td>
-</tr>
-<caption> Minimum numbers of 8-byte updates process zero must send each iteration for the twitter_rv graph.</caption>
-</table>
-</center>
+#### `twitter_rv`
 
-<p></p>
+| cores |    updates | 1G lower bound | 1G bound / 10G observed |
+|------:|-----------:|---------------:|------------------------:|
+|   2x8 | 31,215,505 |          2.00s |                   0.85x |
+|   4x8 | 26,835,975 |          1.72s |                   1.15x |
+|   8x8 | 22,809,014 |          1.46s |                   1.39x |
+|  16x8 | 15,836,150 |          1.01s |                   1.35x |
 
-<center>
-<table border="1" style="width:75%">
-<tr><th>cores</th>
-<!-- <th>worker-level</th>  -->
-<th>updates</th>
-<th>1G lower bound</th>
-<th>1G bound / 10G measured</th>
-</tr>
-<tr><td align="right">2x8</td>
-<!-- <td align="right">214,935,720</td> -->
-<td align="right">75,220,268</td>
-<td align="right">4.81s</td>
-<td align="right">2.08x</td>
-</tr>
-<tr><td align="right">4x8</td>
-<!-- <td align="right">140,918,216</td> -->
-<td align="right">55,465,829</td>
-<td align="right">3.55s</td>
-<td align="right">2.30x</td>
-</tr>
-<tr><td align="right">8x8</td>
-<!-- <td align="right">88,755,160</td> -->
-<td align="right">39,443,730</td>
-<td align="right">2.52s</td>
-<td align="right">2.36x</td>
-</tr>
-<tr><td align="right">16x8</td>
-<!-- <td align="right">55,243,248</td> -->
-<td align="right">26,866,965</td>
-<td align="right"> 1.72s </td>
-<td align="right"> 2.26x </td>
-</tr>
-<caption> Minimum numbers of 8-byte updates process zero must send each iteration for the uk-2007-05 graph.</caption>
-</table>
-</center>
+#### `uk_2007_05`
 
-<p></p>
+| cores |    updates | 1G lower bound | 1G bound / 10G observed |
+|------:|-----------:|---------------:|------------------------:|
+|   2x8 | 75,220,268 |          4.81s |                   2.08x |
+|   4x8 | 55,465,829 |          3.55s |                   2.30x |
+|   8x8 | 39,443,730 |          2.52s |                   2.36x |
+|  16x8 | 26,866,965 |          1.72s |                   2.26x |
 
 These numbers indicate that one cannot hope to get the observed 10G performance on a 1G network just by optimizing the computation. Of course, there are other options &ndash; such as laying out the graph data along the "smarter" Hilbert-curve mentioned earlier &ndash; which we leave for another post.
 
@@ -277,7 +219,7 @@ First, we could change the program to look more like the [smarter single-threade
 
 Perhaps surprisingly, one of the more expensive parts of our implementation is the division by `workers`, which each worker needs to do for each received `(y, update)` pair:
 
-{% highlight rust %}
+```rust
 // repeatedly receive data from other workers
 while let Some((iter, data)) = input2.pull() {
     notificator.notify_at(&iter);
@@ -285,7 +227,7 @@ while let Some((iter, data)) = input2.pull() {
         src[x.0 as usize / workers] += x.1;
     }
 }
-{% endhighlight %}
+```
 
 If we hard-wire `workers` to a compile-time constant power of two (specifically, 16x8 = 128), the per-iteration runtime drops by about 10%, as the compiler turns the division into a shift.
 The fact that replacing arbitrary divisions with constant shifts yields such speedups likely suggests that we're getting pretty "close to the metal", and that relatively few other system overheads exist in our implementation.
