--- a/posts/2015-07-08.md
+++ b/posts/2015-07-08.md
@@ -43,9 +43,9 @@ PageRank is a not-wildly-complicated graph computation: the idea is that each ve
 
 Here is a straightforward, serial PageRank implementation in Rust:
 
-{% highlight rust %}
-fn pagerank<G>(graph: &G: Graph, vertices: usize, alpha: f32)
-{
+```rust
+fn pagerank<G>(graph: &G: Graph, vertices: usize, alpha: f32) {
+
     // mutable per-vertex state
     let mut src = vec![0f32; vertices];
     let mut dst = vec![0f32; vertices];
@@ -67,7 +67,7 @@ fn pagerank<G>(graph: &G: Graph, vertices: usize, alpha: f32)
         for (x,y) in graph.edges() { dst[y] += src[x]; }
     }
 }
-{% endhighlight %}
+```
 
 If we look at the code, the computation manipulates per-vertex state (preparing `src[vertex]` and `dst[vertex]`, using `deg[vertex]`), and then swings through `graph`, increasing `dst[y]` by `src[x]` for each graph edge `(x,y)`.
 
@@ -102,12 +102,12 @@ Each worker groups its edges by *destination*, rather than by source. By so doin
 
 The single-threaded interpretation of this code might look like this:
 
-{% highlight rust %}
+```rust
 // replaces "for (x, y) in graph.edges() { dst[y] += src[x]; }"
 for (y, xs) in graph_transpose.edges() {
     dst[y] += xs.map(|x| src[x]).sum();
 }
-{% endhighlight %}
+```
 
 Because each worker only has edges from vertices `x` equal modulo `workers`, each value of `x / workers` is distinct. We can compact `src` by a factor of `workers`, accessing `src[x / workers]` instead of `src[x]`. Compared to the source-grouped approach, the code does random access into a small vector `src` rather than a large vector `dst`, which benefits locality.
 
