--- a/posts/2015-07-31.md
+++ b/posts/2015-07-31.md
@@ -1,3 +1,5 @@
+## The impact of fast networks on graph analytics, part 2.
+
 This is a joint post with [Malte Schwarzkopf](http://www.cl.cam.ac.uk/~ms705/), cross-blogged here and at [the CamSaS blog](http://www.cl.cam.ac.uk/research/srg/netos/camsas/blog/2015-07-31-timely-pagerank-part2.html). It follows up a [previous post](http://www.frankmcsherry.org/pagerank/distributed/performance/2015/07/08/pagerank.html) evaluating the impact of fast networks on graph processing systems.
 
 ---
