--- a/posts/2015-07-08.md
+++ b/posts/2015-07-08.md
@@ -1,3 +1,5 @@
+## The impact of fast networks on graph analytics, part 1.
+
 This is a joint post with [Malte Schwarzkopf](http://www.cl.cam.ac.uk/~ms705/), cross-blogged here and at [the CamSaS blog](http://www.cl.cam.ac.uk/research/srg/netos/camsas/blog/2015-07-08-timely-pagerank-part1.html).
 
 ---
