--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -10,7 +10,7 @@ This statement always weirded me out a bit, because I think of unordered edge li
 
 When X-Stream was presented at SOSP 2013, I asked author Amitabha Roy how come the time to process the unordered edges on their system was larger than the time to process ordered edges on my laptop (with all of its "random accesses").
 
-Specifically, [I asked]((https://www.google.com/moderator/#15/e=215b85&t=215b85.47)
+Specifically, [I asked](https://www.google.com/moderator/#15/e=215b85&t=215b85.47)
 
 > What overheads does X-Stream introduce, and at what scales does X-Stream outperform more specialized approaches? E.g., PageRank iterations on my laptop (40 lines single threaded C#) takes 64s, versus 75s for 16 cores in X-Stream
 
@@ -24,7 +24,7 @@ This got read aloud, so the whole audience got to hear just how silly I was. Cle
 
 ---
 
-If you've read any of my earlier post on single-threaded graph processing, you might say "64 seconds?!? But, you know you can do that in about 5 seconds...".
+If you've read any of my earlier post on single-threaded graph processing, you might also be saying "64 seconds for PageRank?!? But, you know you can do that in about 5 seconds...".
 
 As it turns out, I wasn't the only one off by an order of magnitude.
 
@@ -247,10 +247,12 @@ Here is a picture where I computed the average number of nanoseconds per edge to
 
 I did this by putting a loop around the bits of code I wrote up above.
 
-According to their web page, "X-Stream is a large and complex system, currently in the region of 15K lines of code and growing fast". I couldn't figure out how to make a pull request, but I have about 47 lines of Rust that might help.
+Then I sorted a random graph with 65M nodes and 1.5B edges, like the `twitter_rv` graph, in 50 seconds on one core, improving on prior estimates of 600 seconds (and, when you add 15 seconds for an ordered PageRank step, slightly edging X-Stream's 75s on 16 cores).
+
+According to their web page, "X-Stream is a large and complex system, currently in the region of 15K lines of code and growing fast". I couldn't figure out how to make a pull request, but I have about 100 lines of radix sort in Rust that might help.
 
 ### Conclusions
 
-Here is where you might expect that I would make some snarky, unkind comments about how not everyone is right. Whatever; I was just as wrong (relatively) about how long pagerank should take as the X-Stream folks seem to have been about sorting. Who knows, maybe I am the one who is wrong about it.
+Here is where you might expect that I would make some snarky, unkind comments about how not everyone is right. Whatever; I was just as wrong (relatively) about how long pagerank should take as the X-Stream folks seem to have been about sorting. Who knows, maybe I am the one who is wrong about sorting too.
 
-Here is a bigger problem: in the big data processing session of one of the top computer systems conferences, no one (speaker, audience, me) knew how long it should take to sort some numbers. I mean, we laugh at those database people who can't unstick their capslock key, but at least they have this figured out.
+Here is a bigger problem: in the big data processing session of one of the top computer systems conferences, no one (speaker, audience, me) seemed to know how long it should take to sort some numbers. I mean, we laugh at those database people who can't unstick their capslock key, but at least they have this figured out.
