--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -34,7 +34,7 @@ Let's take a tour through sorting algorithms, starting from the very easy, up to
 
 #### Calling `sort`
 
-I'm using [Rust](http://rust-lang.org), and Rust has a `sort` method on mutable slices of types `T: Ord`. The implementation of `sort` uses merge sort and allocate twice the size of the original slice, so it's going to be our straw man.
+I'm using [Rust](http://rust-lang.org), and Rust has a `sort` method on mutable slices of types `T: Ord`. The implementation of `sort` uses merge sort and allocates twice the size of the original slice, so it's going to be our straw man.
 
 Because it does all these allocations, I'm not really able to try it out with the 1.48B edges, because that would be 36GB or so. Instead, I'll sort some smaller things, and we will already be disappointed, which is the goal of this section anyhow.
 
@@ -78,7 +78,7 @@ That is about 1376 seconds, 9 seconds of which are data generation, to do ten it
 
 By comparison, in X-Stream's Figure 18, at `1 << 29` edges `gcc`'s sort doesn't finish in 500 seconds (it looks like it is heading for 1000 seconds), and counting sort clocks in at a little over 250 seconds.
 
-It is totally possible I don't understand what they mean by "RMAT scale factor 25". I do think I have the right number of nodes and edges, though I did not follow the "do some random shit ... power laws!" RMAT methodology). Also my laptop totally wasn't available back in 2013 when they did these measurements, but there seems to be a bit of a discrepancy here. Maybe my laptop is 8x faster than whatever they were running on, but...
+It is totally possible I don't understand what they mean by "RMAT scale factor 25". I do think I have the right number of nodes and edges, though I did not follow the "do some random shit ... power laws!" RMAT methodology. Also my laptop totally wasn't available back in 2013 when they did these measurements, but there seems to be a bit of a discrepancy here. Maybe my laptop is 8x faster than whatever they were running on, but...
 
 On the other hand, this graph has about one-third of the edges of the graph I asked about in the question, and if you multiply this by three you get almost 400 seconds, plus some slop to account for a few years passing... Maybe 600 seconds is the right ballpark?
 
@@ -118,7 +118,7 @@ You do four of these sequential scans, and in each you write sequentially to one
 
 The great thing about radix sort is that in one scan through the data does the equivalent of 8 comparisons which would normally take a bunch of conditional logic. Instead, it just pulled out a byte and used it to look up an address.
 
-The downside to radix sort is that is just looks at bytes. If you had some deep and semantically meaningful ordering defined over your type, that's great but were sorting by its bytes.
+The downside to radix sort is that is just looks at bytes. If you had some deep and semantically meaningful ordering defined over your type, that's great but we're sorting by its bytes.
 
 #### Improvements
 
