--- a/posts/2015-08-15.md
+++ b/posts/2015-08-15.md
@@ -161,7 +161,7 @@ sorted in 7.4602396480040625
 
 Oh my. Is that 7.5 seconds to sort `1 << 29` edges?
 
-Well, that sure is faster than 250 seconds, or whatever was floated in the X-Stream paper as the faster way to sort edge data. I wonder if their conclusions still hold up given that sorting is now about 30x faster than they thought it was.
+Well, that sure is faster than 250 seconds, or whatever was floated in the X-Stream paper as the fast way to sort edge data. I wonder if their conclusions still hold up given that sorting is now about 30x faster than they thought it was.
 
 ### About those conclusions ...
 
@@ -169,7 +169,7 @@ Hey let's test the main thesis of the X-Stream paper with a simple experiment.
 
 Their claim is that for many graph processing tasks it is faster to use unordered edge data than it is to sort the edge data and then do the task. We are going to try and reproduce this for a simple task: computing the out-degrees.
 
-Computing out-degrees is about as simple as it gets in graph processing land: we have a bunch of edges, and we want to know, for each source, how many edges are there from it to other nodes?
+Computing out-degrees is about as simple as it gets in graph processing land: we have a bunch of edges, and we want to know: for each source, how many edges are there from it to other nodes?
 
 We first make some random graph data:
 
